project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_list__tests__contact_suggestions__concat_contact_suggestions_1.snap
---
source: contacts/contacts-common/src/contact_list.rs
expression: display_suggestions(one.all().to_vec())
---
3 suggestions:

contact/235: Michael Brogile
M (#213474): Michael Brogile <mXXXXXXXX@XXXXX>,  local_contact_id: 234, Proton address, last used: 2

contact/123: Barbara Lox
B (#A839A4): Barbara Lox <bXXXXXX@XXXXX>,  local_contact_id: 123, Proton address, last used: 1

contact/234: Michael Scott
M (#213474): Michael Scott <mXXXXXX@XXXXX>,  local_contact_id: 234, Proton address, last used: 2
