project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_list__tests__contact_suggestions__test_contact_suggestions_0.snap
---
source: contacts/contacts-common/src/contact_list.rs
expression: display_suggestions(res)
---
0 suggestions:
