project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_list__tests__contact_suggestions__test_contact_suggestions_3.snap
---
source: contacts/contacts-common/src/contact_list.rs
expression: display_suggestions(res)
---
3 suggestions:

contact/0: Michael Scott
M (#4989FF): m.scott@pm.me <mXXXXXX@XXXXX>, Proton address, last used: 2

contact/0: Barbara Lox
B (#9E66FC): barbara@pm.me <bXXXXXX@XXXXX>, Proton address, last used: 1

contact/0: Jake Peralta
J (#9C89FF): jake.peralta@99.com <jXXXXXXXXXXX@XXXXXX>, last used: 3
