project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_list__tests__contact_suggestions__test_contact_suggestions_7.snap
---
source: contacts/contacts-common/src/contact_list.rs
expression: display_suggestions(res)
---
8 suggestions:

contact/0: Jason Mendoza
J (#764AC4): jianyu.li@pm.me <jXXXXXXXX@XXXXX>, Proton address, last used: 2

contact/0: Michael Scott
M (#4989FF): m.scott@pm.me <mXXXXXX@XXXXX>, Proton address, last used: 2

contact/0: Barbara Lox
B (#9E66FC): barbara@pm.me <bXXXXXX@XXXXX>, Proton address, last used: 1

contact/0: Jake Peralta
J (#9C89FF): jake.peralta@99.com <jXXXXXXXXXXX@XXXXXX>, last used: 3

contact/0: Jake Peralta
H (#764AC4): harvey@jp.com <hXXXXX@XXXXXX>, last used: 1

device-contact-email/000-0: Aunt Molly
A (#7B3185): <mXXXX@XXXXXXXXXX>

device-contact-email/001-0: Aunt Molly
A (#7B3185): <bXXXXX@XXXXXXXX>

group/910: M. Schur Productions
J (#764AC4): jianyu.li@pm.me <jXXXXXXXX@XXXXX>, Proton address, last used: 2
M (#4989FF): m.scott@pm.me <mXXXXXX@XXXXX>, Proton address, last used: 2
J (#9C89FF): jake.peralta@99.com <jXXXXXXXXXXX@XXXXXX>, last used: 3
